# sensinghub

./: CONTRIBUTING.md  Dockerfile  LICENSE.txt  Makefile.am  README.md  configure.ac  create_user.sh  sensing-hub.pc.in
.github/actions/aws_s3_helper/: action.yml
.github/actions/sync/: action.yml
.github/workflows/: build.yml  pre_merge_build.yml  qcom-preflight-checks.yml  run_armor.yml  stale-issues.yaml
apis/proto/: Android.bp  Makefile.am  nanopb.proto  sns_accel.proto  sns_ambient_temperature.proto  sns_amd.proto  sns_cal.proto  sns_client.proto  sns_client_ipc.proto  sns_device_mode.proto  sns_direct_channel.proto  sns_geomag_rv.proto  sns_hinge_angle.proto  sns_pedometer.proto  sns_persist_motion_detect.proto  sns_physical_sensor_test.proto  sns_proximity.proto  sns_sar.proto  sns_sig_motion.proto  sns_std.proto  sns_std_event_gated_sensor.proto  sns_std_sensor.proto  sns_std_type.proto  sns_suid.proto  sns_transport_ppe.proto
apis/proto/google/protobuf/: descriptor.proto
build_config/: sensinghub_vendor_board.mk  sensinghub_vendor_product.mk  sensors-techpack.mk
ci/: build.sh  build_args.sh
common/: Android.bp
common/inc/: suid.h
debian/: changelog  control  copyright  qcom-sensing-hub-dev.install  qcom-sensing-hub.install  rules
examples/SessionClient/: Android.bp  Makefile.am  SessionClient.cpp
proto/: Android.bp  Makefile.am  sns_ambient_light.proto  sns_device_orient.proto  sns_game_rv.proto  sns_gravity.proto  sns_gyro.proto  sns_gyro_cal.proto  sns_hall.proto  sns_humidity.proto  sns_mag.proto  sns_mag_cal.proto  sns_persist_stationary_detect.proto  sns_pressure.proto  sns_rotv.proto  sns_sensor_temperature.proto  sns_tilt.proto
public_headers/: config.yml
session/1.0/: Android.bp  CMakeLists.txt  Makefile.am
session/1.0/inc/: ISession.h  SessionFactory.h
session/1.0/src/: SessionFactory.cpp
sessionlogger/: Android.bp  Makefile.am
sessionlogger/inc/: ISessionLogger.h  LoggerFactory.h  NullLogger.h  SensorsDiagLogger.h
sessionlogger/src/: LoggerFactory.cpp  SensorsDiagLogger.cpp
utils/: Android.bp  Makefile.am  Makefile.in
utils/inc/: qshJsonParser.h  qshLog.h  qshPb.h  qshPbSensorUtils.h  qshSSR.h  qshTarget.h  qshTimeUtil.h  qshTrace.h  qshWakelock.h  qshWorker.h  suidLookUp.h
utils/src/: qshJsonParser.cpp  qshLog.cpp  qshPb.cpp  qshSSR.cpp  qshWakelock.cpp  suidLookUp.cpp
